--- a/index.html
+++ b/index.html
@@ -4,42 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <title>Document</title>
   </head>
     <body>
-      <header>
-        <div class="notif">Deze site maakt gebruik van cookies. Ik ga akkoord met deze <a href="">privacy policy</a>&nbsp;<a href="">ok</a></div>
+      <header class="fixed">
+        <div class="notif">Deze site maakt gebruik van cookies. Ik ga akkoord met deze <a href="">privacy policy</a>&nbsp; &nbsp;<a href="">ok</a></div>
+        <nav>
+          <ul>
+            <li>We make Savourist.</li>
+            <li>Agency</li>
+            <li>Cases</li>
+            <li>Contact</li>
+          </ul>
+        </nav>
       </header>
-      <nav>
-        <ul>
-          <li>We make Savourist.</li>
-          <li>Agency</li>
-          <li>Cases</li>
-          <li>Contact</li>
-        </ul>
-      </nav>
       <section>
         <h1>We're a creative and strategic branding agency for digital and print.</h1>
-        <br>
         <br>
         <img class="arrow" src="images/right-arrow.svg" alt="arrow">
       </section>
       <br>
       <br>
-      <section>
+      <section class="fomu">
           <img class="picture" src="images/picture1.png" alt="building">
-          <h2>FOMU</h2>
+          <h2 class="title">FOMU</h2>
           <img class="arrow-right" src="images/right-arrow.svg" alt="arrow">
       </section>
       <section>
           <img class="picture" src="images/picture2.png" alt="kayaking">
-          <h2>Kommit</h2>
+          <h2 class="title">Kommit</h2>
           <img class="arrow-right" src="images/right-arrow.svg" alt="arrow">
       </section>
       <section>
           <img class="picture" src="images/picture3.png" alt="Savourist">
-          <h2>Savourist</h2>
+          <h2 class="title">Savourist</h2>
           <img class="arrow-right" src="images/right-arrow.svg" alt="arrow">
       </section>
       <br>
